# UCV_LAB_SI_2

./: Laboratorio_2_Torrejon_Diego.ipynb  README.md
laboratorio2_ia/: pyproject.toml
laboratorio2_ia/src/image_processing/: loader.py  main.py  transform.py
laboratorio2_ia/tests/: test_transform.py
